# ray-tracer-cpp

./: CMakeLists.txt  color.h  main.cpp  vector.cpp  vector.h
camera/: camera.cpp  camera.h
hittable/: bvh.cpp  bvh.h  constant_medium.cpp  constant_medium.h  hittable.h  hittable_list.cpp  hittable_list.h  instance.cpp  instance.h  quad.cpp  quad.h  quadrilateral.cpp  quadrilateral.h  sphere.cpp  sphere.h  triangle.h
images/: cornell_box_with_instances.ppm  final_image.ppm  volumetric.ppm
materials/: Isotropic.h  dielectric.cpp  dielectric.h  diffuse.cpp  diffuse.h  diffuse_light.h  isotropic.h  material.cpp  material.h  metal.cpp  metal.h
ray/: color.h  ray.h  vector.cpp  vector.h
render/: camera.cpp  camera.h  scene.h
tests/: aabb_test.cpp  interval_test.cpp  ray_test.cpp  vector_test.cpp
textures/: image_texture.h  noise_texture.h  solid.h  texture.h
utility/: aabb.cpp  aabb.h  interval.cpp  interval.h  perlin.cpp  perlin.h  random.h
vector/: color.h  ray.h  vector.cpp  vector.h
